# deep-get

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yaml  python-package.yml  python-publish.yml
la_deep_get/: __init__.py
tests/: test_complex_iterating.py  test_not_iterating.py  test_simple_iterating.py
