[project]
name = "la-deep-get"
version = "0.0.3"
description = "Function to get value from unknown structure"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
maintainers = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
keywords = [
    "function",
    "get",
    "structure"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
repository = "https://github.com/thiagola92/la-deep-get"

[tool.pdm]

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
